--- a/AndrPraktika000/AndrPraktika000.csproj
+++ b/AndrPraktika000/AndrPraktika000.csproj
@@ -7,7 +7,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Ресурсы\" />
+    <Compile Remove="DBConnectionService\**" />
+    <Compile Remove="Resourses\**" />
+    <EmbeddedResource Remove="DBConnectionService\**" />
+    <EmbeddedResource Remove="Resourses\**" />
+    <None Remove="DBConnectionService\**" />
+    <None Remove="Resourses\**" />
+    <Page Remove="DBConnectionService\**" />
+    <Page Remove="Resourses\**" />
   </ItemGroup>
-
-</Project>
+  
+  <ItemGroup>
+    <Reference Include="DBConnectionService">
+      <HintPath>bin\Debug\netcoreapp3.1\DBConnectionService.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.10.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup></Project>
